artists,albums,tracks + bs update

--- a/staff/marti-malek/spotify-app/index.html
+++ b/staff/marti-malek/spotify-app/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <main id="root" class="container p-3">
-        <header class="text-center">
+    <main id="root" class="container-fluid">
+        <header class="text-center card-header">
             <h1>🎶 Spotify App 🎧</h1>
         </header>
     </main>
