--- a/staff/marti-malek/spotify-app/index.html
+++ b/staff/marti-malek/spotify-app/index.html
@@ -8,6 +8,9 @@
     <title>Spotify-APP</title>
     <link rel="stylesheet" href="vendor/bootstrap/4.1.3/css/bootstrap.css">
     <link rel="stylesheet" href="styles/main.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Major+Mono+Display');
+        </style>
 </head>
 
 <body>
