--- a/staff/marti-malek/spotify-app-react/index.html
+++ b/staff/marti-malek/spotify-app-react/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Spotify-APP</title>
+    <title>Spotify-APP-React</title>
     <link rel="stylesheet" href="vendor/bootstrap/4.1.3/css/bootstrap.css">
     <link rel="stylesheet" href="styles/main.css">
     <style>
@@ -26,6 +26,7 @@
     <script src="vendor/react/16.6.3/react-dom.development.js"></script>
     <script src="vendor/babel/6.26.0/babel.js"></script>
     <script src="vendor/spotify-api/1.0.0/spotify-api-1.0.0.js"></script>
+    <script src="vendor/jquery/3.3.1/jquery-3.3.1.js"></script>
     <script src="vendor/popper/1.14.3/popper.js"></script>
     <script src="vendor/bootstrap/4.1.3/js/bootstrap.js"></script>
     
