finished hover added half-favs

--- a/staff/marti-malek/spotify-app-react/index.html
+++ b/staff/marti-malek/spotify-app-react/index.html
@@ -11,12 +11,14 @@
     <style>
         @import url('https://fonts.googleapis.com/css?family=Major+Mono+Display');
         </style>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 
 <body>
     <div class="container-fluid">
         <header class="text-center card-header">
             <h1>🎶 Spotify App 🎧</h1>
+            <span class="glyphicon glyphicon-envelope"></span>
         </header>
     </div>
     <div id="root" class="container-fluid">
