--- a/staff/marti-malek/spotify-app-react-scripts/public/index.html
+++ b/staff/marti-malek/spotify-app-react-scripts/public/index.html
@@ -14,7 +14,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Spotify-APP-React</title>
-    <link rel="stylesheet" href="vendor/bootstrap/4.1.3/css/bootstrap.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Major+Mono+Display');
         </style>
@@ -47,13 +47,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="../vendor/react/16.6.3/react.development.js"></script>
+    <!-- <script src="../vendor/react/16.6.3/react.development.js"></script>
     <script src="../vendor/react/16.6.3/react-dom.development.js"></script>
     <script src="../vendor/babel/6.26.0/babel.js"></script>
     <script src="../vendor/spotify-api/1.0.0/spotify-api-1.0.0.js"></script>
     <script src="../vendor/jquery/3.3.1/jquery-3.3.1.js"></script>
     <script src="../vendor/popper/1.14.3/popper.js"></script>
-    <script src="../vendor/bootstrap/4.1.3/js/bootstrap.js"></script>
+    <script src="../vendor/bootstrap/4.1.3/js/bootstrap.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
